--- a/Connect_4_game.ipynb
+++ b/Connect_4_game.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "1bb6e279-a82e-4a12-b25e-ba4bf5fee54c",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "613e912a-1bbe-48d2-8f93-bca12eef007a",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "6314adda-b0b2-4b39-a741-49fc507cd321",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "5e66fcce-2ad9-47d7-994c-fb1635f997a0",
    "metadata": {},
    "outputs": [],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "164c77f3-7850-4b82-940d-3fe25f299856",
    "metadata": {},
    "outputs": [],
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "81d071fa-8382-4040-9171-e055d08acfdf",
    "metadata": {},
    "outputs": [],
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "3848c44d-1886-4d68-96d3-622f4c726729",
    "metadata": {},
    "outputs": [],
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "af94c195-47f2-4ba6-adde-1cb3a7495396",
    "metadata": {},
    "outputs": [
@@ -558,67 +558,497 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "33ebcea5-83c7-496c-9d2f-fdb08290ed66",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6c4f91d6-56a2-4dd6-9150-f887ecea6e10",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "419c61b5-c857-43be-9d5c-8b7805ab7911",
    "metadata": {},
    "source": [
-    "## <center> human VS AI"
+    "## <center> Human VS AI"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae070358",
+   "metadata": {},
+   "source": [
+    "# 🧩 1️⃣ Imports\n",
+    "# Idea:\n",
+    "# - numpy 👉 represents the board as a matrix\n",
+    "# - random 👉 choose a random move sometimes\n",
+    "# - math 👉 use +∞ and -∞ in minimax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "60d02587-347d-4a00-8abf-03f78a7e81fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import random\n",
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "952cb620",
+   "metadata": {},
+   "source": [
+    "# 🎮 2️⃣ Game Constants\n",
+    "# Idea:\n",
+    "# - Board = 6 rows × 7 columns\n",
+    "# - Player = 0, AI = 1\n",
+    "# - EMPTY = 0, pieces = 1 or 2\n",
+    "# - WINDOW_LENGTH = 4 (win condition)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "4f3e7473",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ROW_COUNT = 6\n",
+    "COLUMN_COUNT = 7\n",
+    "PLAYER = 0\n",
+    "AI = 1\n",
+    "EMPTY = 0\n",
+    "PLAYER_PIECE = 1\n",
+    "AI_PIECE = 2\n",
+    "WINDOW_LENGTH = 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32b43607",
+   "metadata": {},
+   "source": [
+    "# 🧱 3️⃣ Create Board\n",
+    "# Idea: Initialize board with zeros, each 0 = empty"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "28df0d3b-caf8-4405-98e1-127c48bab5c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_board():\n",
+    "    return np.zeros((ROW_COUNT, COLUMN_COUNT))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14dd4326",
+   "metadata": {},
+   "source": [
+    "# ⬇️ 4️⃣ Drop Piece\n",
+    "# Idea: Place the piece in the correct row & column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "e9a26962-abab-4929-a6fe-5bd5c4417298",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def drop_piece(board, row, col, piece):\n",
+    "    board[row][col] = piece"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c522ff83",
+   "metadata": {},
+   "source": [
+    "# ✅ 5️⃣ Valid Location\n",
+    "# Idea: Check if the top row in the column is empty → valid move"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "4d8721db-03ff-4321-91ad-7454fc0aaf23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_valid_location(board, col):\n",
+    "    return board[ROW_COUNT-1][col] == 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96121a4c",
+   "metadata": {},
+   "source": [
+    "# 📍 6️⃣ Next Open Row\n",
+    "# Idea: Find the first empty row in a column from bottom to top"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "1e771d14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_next_open_row(board, col):\n",
+    "    for r in range(ROW_COUNT):\n",
+    "        if board[r][col] == 0:\n",
+    "            return r"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1febee1",
+   "metadata": {},
+   "source": [
+    "# 🖨️ 7️⃣ Print Board\n",
+    "# Idea: Flip vertically so it looks like a real board"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "6079052f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_board(board):\n",
+    "    print(np.flip(board, 0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46f833ee",
+   "metadata": {},
+   "source": [
+    "# 📊 8️⃣ Valid Columns\n",
+    "# Idea: Return a list of columns that are not full"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "054f66a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_valid_locations(board):\n",
+    "    return [c for c in range(COLUMN_COUNT) if is_valid_location(board, c)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c1e1c79",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# 🏆 9️⃣ Winning Move\n",
+    "# Idea: Check 4 pieces in all directions: horizontal, vertical, diagonals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "be0ef2b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def winning_move(board, piece):\n",
+    "    # Horizontal\n",
+    "    for c in range(COLUMN_COUNT-3):\n",
+    "        for r in range(ROW_COUNT):\n",
+    "            if all(board[r][c+i] == piece for i in range(4)):\n",
+    "                return True\n",
+    "    # Vertical\n",
+    "    for c in range(COLUMN_COUNT):\n",
+    "        for r in range(ROW_COUNT-3):\n",
+    "            if all(board[r+i][c] == piece for i in range(4)):\n",
+    "                return True\n",
+    "    # Diagonal /\n",
+    "    for c in range(COLUMN_COUNT-3):\n",
+    "        for r in range(ROW_COUNT-3):\n",
+    "            if all(board[r+i][c+i] == piece for i in range(4)):\n",
+    "                return True\n",
+    "    # Diagonal \\\n",
+    "    for c in range(COLUMN_COUNT-3):\n",
+    "        for r in range(3, ROW_COUNT):\n",
+    "            if all(board[r-i][c+i] == piece for i in range(4)):\n",
+    "                return True\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75e93ea8",
+   "metadata": {},
+   "source": [
+    "# 🤝 1️⃣0️⃣ Draw\n",
+    "# Idea: No valid moves left and no winner → Draw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "8c7d7d6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_draw(board):\n",
+    "    return len(get_valid_locations(board)) == 0 and \\\n",
+    "           not winning_move(board, PLAYER_PIECE) and \\\n",
+    "           not winning_move(board, AI_PIECE)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afb4c94e",
+   "metadata": {},
+   "source": [
+    "# 🧠 1️⃣1️⃣ Terminal Node\n",
+    "# Idea: Game over if Player wins, AI wins, or Draw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "637e5b82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_terminal_node(board):\n",
+    "    return winning_move(board, PLAYER_PIECE) or \\\n",
+    "           winning_move(board, AI_PIECE) or \\\n",
+    "           len(get_valid_locations(board)) == 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fefd7bb",
+   "metadata": {},
+   "source": [
+    "# ⭐ 1️⃣2️⃣ Evaluate Window (4 cells)\n",
+    "# Idea: AI evaluates sequences of 4 cells\n",
+    "# - 4 AI pieces → very good\n",
+    "# - 3 AI pieces + 1 empty → good\n",
+    "# - 3 player pieces + 1 empty → subtract points"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "b2f08779",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def evaluate_window(window, piece):\n",
+    "    score = 0\n",
+    "    opp_piece = PLAYER_PIECE if piece == AI_PIECE else AI_PIECE\n",
+    "\n",
+    "    if window.count(piece) == 4:\n",
+    "        score += 100\n",
+    "    elif window.count(piece) == 3 and window.count(EMPTY) == 1:\n",
+    "        score += 5\n",
+    "    elif window.count(piece) == 2 and window.count(EMPTY) == 2:\n",
+    "        score += 2\n",
+    "\n",
+    "    if window.count(opp_piece) == 3 and window.count(EMPTY) == 1:\n",
+    "        score -= 4\n",
+    "\n",
+    "    return score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb072971",
+   "metadata": {},
+   "source": [
+    "# 📈 1️⃣3️⃣ Score Board\n",
+    "# Idea: Evaluate entire board\n",
+    "# - Center column is more valuable\n",
+    "# - Check all rows, columns, diagonals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "98d0cb46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def score_position(board, piece):\n",
+    "    score = 0\n",
+    "    # Center column\n",
+    "    center_array = list(board[:, COLUMN_COUNT//2])\n",
+    "    score += center_array.count(piece) * 3\n",
+    "    # Horizontal\n",
+    "    for r in range(ROW_COUNT):\n",
+    "        row_array = list(board[r,:])\n",
+    "        for c in range(COLUMN_COUNT-3):\n",
+    "            score += evaluate_window(row_array[c:c+4], piece)\n",
+    "    # Vertical\n",
+    "    for c in range(COLUMN_COUNT):\n",
+    "        col_array = list(board[:,c])\n",
+    "        for r in range(ROW_COUNT-3):\n",
+    "            score += evaluate_window(col_array[r:r+4], piece)\n",
+    "    # Diagonals\n",
+    "    for r in range(ROW_COUNT-3):\n",
+    "        for c in range(COLUMN_COUNT-3):\n",
+    "            score += evaluate_window([board[r+i][c+i] for i in range(4)], piece)\n",
+    "            score += evaluate_window([board[r+3-i][c+i] for i in range(4)], piece)\n",
+    "    return score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff4f9fa3",
+   "metadata": {},
+   "source": [
+    "# 🤖 1️⃣4️⃣ Minimax + Alpha-Beta\n",
+    "# Idea: AI looks ahead certain depth, tries all moves, picks best using pruning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "84b2871a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def minimax(board, depth, alpha, beta, maximizingPlayer):\n",
+    "    valid_locations = get_valid_locations(board)\n",
+    "    is_terminal = is_terminal_node(board)\n",
+    "\n",
+    "    if depth == 0 or is_terminal:\n",
+    "        if is_terminal:\n",
+    "            if winning_move(board, AI_PIECE):\n",
+    "                return None, 10**14\n",
+    "            elif winning_move(board, PLAYER_PIECE):\n",
+    "                return None, -10**14\n",
+    "            else:\n",
+    "                return None, 0\n",
+    "        else:\n",
+    "            return None, score_position(board, AI_PIECE)\n",
+    "\n",
+    "    if maximizingPlayer:\n",
+    "        value = -math.inf\n",
+    "        column = random.choice(valid_locations)\n",
+    "        for col in valid_locations:\n",
+    "            row = get_next_open_row(board, col)\n",
+    "            b_copy = board.copy()\n",
+    "            drop_piece(b_copy, row, col, AI_PIECE)\n",
+    "            new_score = minimax(b_copy, depth-1, alpha, beta, False)[1]\n",
+    "            if new_score > value:\n",
+    "                value = new_score\n",
+    "                column = col\n",
+    "            alpha = max(alpha, value)\n",
+    "            if alpha >= beta:\n",
+    "                break\n",
+    "        return column, value\n",
+    "    else:\n",
+    "        value = math.inf\n",
+    "        column = random.choice(valid_locations)\n",
+    "        for col in valid_locations:\n",
+    "            row = get_next_open_row(board, col)\n",
+    "            b_copy = board.copy()\n",
+    "            drop_piece(b_copy, row, col, PLAYER_PIECE)\n",
+    "            new_score = minimax(b_copy, depth-1, alpha, beta, True)[1]\n",
+    "            if new_score < value:\n",
+    "                value = new_score\n",
+    "                column = col\n",
+    "            beta = min(beta, value)\n",
+    "            if alpha >= beta:\n",
+    "                break\n",
+    "        return column, value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bca2347b",
+   "metadata": {},
+   "source": [
+    "# ▶️ 1️⃣5️⃣ Main Game Loop\n",
+    "# Idea: Initialize board, alternate turns, check win/draw"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60d02587-347d-4a00-8abf-03f78a7e81fd",
+   "id": "50424394",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "board = create_board()\n",
+    "game_over = False\n",
+    "turn = random.randint(PLAYER, AI)\n",
+    "print_board(board)\n",
+    "\n",
+    "while not game_over:\n",
+    "    if turn == PLAYER:\n",
+    "        col = int(input(\"Player 1 Make your Selection (0-6): \"))\n",
+    "        if is_valid_location(board, col):\n",
+    "            row = get_next_open_row(board, col)\n",
+    "            drop_piece(board, row, col, PLAYER_PIECE)\n",
+    "            if winning_move(board, PLAYER_PIECE):\n",
+    "                print_board(board)\n",
+    "                print(\"PLAYER 1 WINS!!\")\n",
+    "                game_over = True\n",
+    "            elif is_draw(board):\n",
+    "                print_board(board)\n",
+    "                print(\"DRAW!\")\n",
+    "                game_over = True\n",
+    "            turn = AI\n",
+    "            print_board(board)\n",
+    "    else:\n",
+    "        col, _ = minimax(board, 5, -math.inf, math.inf, True)\n",
+    "        if is_valid_location(board, col):\n",
+    "            row = get_next_open_row(board, col)\n",
+    "            drop_piece(board, row, col, AI_PIECE)\n",
+    "            if winning_move(board, AI_PIECE):\n",
+    "                print_board(board)\n",
+    "                print(\"AI WINS!!\")\n",
+    "                game_over = True\n",
+    "            elif is_draw(board):\n",
+    "                print_board(board)\n",
+    "                print(\"DRAW!\")\n",
+    "                game_over = True\n",
+    "            turn = PLAYER\n",
+    "            print_board(board)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "28df0d3b-caf8-4405-98e1-127c48bab5c3",
+   "cell_type": "markdown",
+   "id": "c022f849",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e9a26962-abab-4929-a6fe-5bd5c4417298",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4d8721db-03ff-4321-91ad-7454fc0aaf23",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## <center> Human VS Human"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -630,7 +1060,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
