Connect4 :( Human VS Human):

--- a/Connect_4_game.ipynb
+++ b/Connect_4_game.ipynb
@@ -1042,11 +1042,369 @@
    "source": [
     "## <center> Human VS Human"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7de6337-4861-44dd-a471-c0b711f56b32",
+   "metadata": {},
+   "source": [
+    "### Import Libraries and Define Constants\n",
+    "- `numpy` is used to create and manipulate the game board.\n",
+    "- We define the board size, piece values, and player identifiers.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d2709ebc-b5fa-4864-8da0-0438f0c7b605",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# ================= CONSTANTS =================\n",
+    "ROW_COUNT = 6\n",
+    "COLUMN_COUNT = 7\n",
+    "\n",
+    "EMPTY = 0\n",
+    "PLAYER1_PIECE = 1\n",
+    "PLAYER2_PIECE = 2\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8bfe32a-8052-4aaf-ace8-ff3ba3613dc7",
+   "metadata": {},
+   "source": [
+    "### Board Creation and Display\n",
+    "- `create_board()` initializes the board with zeros.\n",
+    "- `print_board()` prints the board flipped vertically for easier reading.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "652ff581-f0d7-46af-971f-c37bca8bfb82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_board():\n",
+    "    return np.zeros((ROW_COUNT, COLUMN_COUNT), dtype=int)\n",
+    "\n",
+    "def print_board(board):\n",
+    "    print(np.flip(board, 0))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5b2c76b-3f60-4dfc-acac-5f3fdf88e972",
+   "metadata": {},
+   "source": [
+    "### Dropping Pieces and Checking Valid Moves\n",
+    "- `drop_piece(board, row, col, piece)` places a piece in the board.\n",
+    "- `is_valid_location(board, col)` checks if the top row of a column is empty.\n",
+    "- `get_next_open_row(board, col)` returns the first empty row in the chosen column.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "15f9dc94-91c3-4e14-979f-b24d78853ae7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def drop_piece(board, row, col, piece):\n",
+    "    board[row][col] = piece\n",
+    "\n",
+    "def is_valid_location(board, col):\n",
+    "    return board[ROW_COUNT-1][col] == 0\n",
+    "\n",
+    "def get_next_open_row(board, col):\n",
+    "    for r in range(ROW_COUNT):\n",
+    "        if board[r][col] == 0:\n",
+    "            return r\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4c0be1e-a5b4-4e58-83dd-6cf23802693f",
+   "metadata": {},
+   "source": [
+    "### Check for a Winning Move\n",
+    "- Checks all possible four-in-a-row sequences:\n",
+    "  - Horizontal\n",
+    "  - Vertical\n",
+    "  - Positive diagonal (\\)\n",
+    "  - Negative diagonal (/)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f555f420-5956-4385-947a-621c3bff3ac9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def winning_move(board, piece):\n",
+    "    # Horizontal\n",
+    "    for c in range(COLUMN_COUNT-3):\n",
+    "        for r in range(ROW_COUNT):\n",
+    "            if all(board[r][c+i] == piece for i in range(4)):\n",
+    "                return True\n",
+    "    # Vertical\n",
+    "    for c in range(COLUMN_COUNT):\n",
+    "        for r in range(ROW_COUNT-3):\n",
+    "            if all(board[r+i][c] == piece for i in range(4)):\n",
+    "                return True\n",
+    "    # Positive diagonal\n",
+    "    for c in range(COLUMN_COUNT-3):\n",
+    "        for r in range(ROW_COUNT-3):\n",
+    "            if all(board[r+i][c+i] == piece for i in range(4)):\n",
+    "                return True\n",
+    "    # Negative diagonal\n",
+    "    for c in range(COLUMN_COUNT-3):\n",
+    "        for r in range(3, ROW_COUNT):\n",
+    "            if all(board[r-i][c+i] == piece for i in range(4)):\n",
+    "                return True\n",
+    "    return False\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab679e6f-2eaa-4da5-8c16-2e6bff1a4c32",
+   "metadata": {},
+   "source": [
+    "### Check for a Draw\n",
+    "- `is_draw(board)` returns True if all columns are full and no player has won.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "bab0cbef-6096-4a64-a63c-241a2f83dd86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_draw(board):\n",
+    "    return all(not is_valid_location(board, c) for c in range(COLUMN_COUNT))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2662bdd-3f27-434e-a702-5f6b28ad1ce6",
+   "metadata": {},
+   "source": [
+    "### Main Game Loop\n",
+    "- Alternates turns between Player 1 and Player 2.\n",
+    "- Accepts column input from players.\n",
+    "- Updates the board and prints it.\n",
+    "- Checks for a win or draw after each move.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6b4f7107-86e8-4533-9d0d-09355ed61846",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]]\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Player 1 - Choose a column (0-6):  1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 1 0 0 0 0 0]]\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Player 2 - Choose a column (0-6):  6\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 1 0 0 0 0 2]]\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Player 1 - Choose a column (0-6):  2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 1 1 0 0 0 2]]\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Player 2 - Choose a column (0-6):  5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 1 1 0 0 2 2]]\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Player 1 - Choose a column (0-6):  3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 1 1 1 0 2 2]]\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Player 2 - Choose a column (0-6):  0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [2 1 1 1 0 2 2]]\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Player 1 - Choose a column (0-6):  4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [2 1 1 1 1 2 2]]\n",
+      "Player 1 WINS!\n"
+     ]
+    }
+   ],
+   "source": [
+    "board = create_board()\n",
+    "game_over = False\n",
+    "turn = 0  # 0 -> Player 1, 1 -> Player 2\n",
+    "\n",
+    "print_board(board)\n",
+    "\n",
+    "while not game_over:\n",
+    "    player = \"Player 1\" if turn == 0 else \"Player 2\"\n",
+    "    piece = PLAYER1_PIECE if turn == 0 else PLAYER2_PIECE\n",
+    "\n",
+    "    # Ask for player input\n",
+    "    valid_move = False\n",
+    "    while not valid_move:\n",
+    "        try:\n",
+    "            col = int(input(f\"{player} - Choose a column (0-{COLUMN_COUNT-1}): \"))\n",
+    "            if 0 <= col < COLUMN_COUNT and is_valid_location(board, col):\n",
+    "                valid_move = True\n",
+    "            else:\n",
+    "                print(\"Invalid column. Try again.\")\n",
+    "        except ValueError:\n",
+    "            print(\"Invalid input. Enter an integer.\")\n",
+    "\n",
+    "    row = get_next_open_row(board, col)\n",
+    "    drop_piece(board, row, col, piece)\n",
+    "\n",
+    "    print_board(board)\n",
+    "\n",
+    "    if winning_move(board, piece):\n",
+    "        print(f\"{player} WINS!\")\n",
+    "        game_over = True\n",
+    "    elif is_draw(board):\n",
+    "        print(\"DRAW!\")\n",
+    "        game_over = True\n",
+    "    else:\n",
+    "        turn = (turn + 1) % 2\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1da2df97-73cc-4fde-b6af-70676580c310",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1060,7 +1418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
