--- a/Connect_4_game.ipynb
+++ b/Connect_4_game.ipynb
@@ -1220,7 +1220,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Player 1 - Choose a column (0-6):  1\n"
@@ -1239,7 +1239,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Player 2 - Choose a column (0-6):  6\n"
@@ -1258,7 +1258,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Player 1 - Choose a column (0-6):  2\n"
@@ -1277,7 +1277,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Player 2 - Choose a column (0-6):  5\n"
@@ -1296,7 +1296,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Player 1 - Choose a column (0-6):  3\n"
@@ -1315,7 +1315,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Player 2 - Choose a column (0-6):  0\n"
@@ -1334,7 +1334,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Player 1 - Choose a column (0-6):  4\n"
@@ -1404,7 +1404,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1418,7 +1418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
