--- a/Connect_4_game.ipynb
+++ b/Connect_4_game.ipynb
@@ -570,11 +570,11 @@
    "id": "ae070358",
    "metadata": {},
    "source": [
-    "# 🧩 1️⃣ Imports\n",
-    "# Idea:\n",
-    "# - numpy 👉 represents the board as a matrix\n",
-    "# - random 👉 choose a random move sometimes\n",
-    "# - math 👉 use +∞ and -∞ in minimax"
+    "### 🧩 1️⃣ Imports\n",
+    "### Idea:\n",
+    "### - numpy 👉 represents the board as a matrix\n",
+    "### - random 👉 choose a random move sometimes\n",
+    "### - math 👉 use +∞ and -∞ in minimax"
    ]
   },
   {
@@ -594,12 +594,12 @@
    "id": "952cb620",
    "metadata": {},
    "source": [
-    "# 🎮 2️⃣ Game Constants\n",
-    "# Idea:\n",
-    "# - Board = 6 rows × 7 columns\n",
-    "# - Player = 0, AI = 1\n",
-    "# - EMPTY = 0, pieces = 1 or 2\n",
-    "# - WINDOW_LENGTH = 4 (win condition)"
+    "### 🎮 2️⃣ Game Constants\n",
+    "### Idea:\n",
+    "### - Board = 6 rows × 7 columns\n",
+    "### - Player = 0, AI = 1\n",
+    "### - EMPTY = 0, pieces = 1 or 2\n",
+    "### - WINDOW_LENGTH = 4 (win condition)"
    ]
   },
   {
@@ -624,8 +624,8 @@
    "id": "32b43607",
    "metadata": {},
    "source": [
-    "# 🧱 3️⃣ Create Board\n",
-    "# Idea: Initialize board with zeros, each 0 = empty"
+    "### 🧱 3️⃣ Create Board\n",
+    "### Idea: Initialize board with zeros, each 0 = empty"
    ]
   },
   {
@@ -644,8 +644,8 @@
    "id": "14dd4326",
    "metadata": {},
    "source": [
-    "# ⬇️ 4️⃣ Drop Piece\n",
-    "# Idea: Place the piece in the correct row & column"
+    "### ⬇️ 4️⃣ Drop Piece\n",
+    "### Idea: Place the piece in the correct row & column"
    ]
   },
   {
@@ -664,8 +664,8 @@
    "id": "c522ff83",
    "metadata": {},
    "source": [
-    "# ✅ 5️⃣ Valid Location\n",
-    "# Idea: Check if the top row in the column is empty → valid move"
+    "### ✅ 5️⃣ Valid Location\n",
+    "### Idea: Check if the top row in the column is empty → valid move"
    ]
   },
   {
@@ -684,8 +684,8 @@
    "id": "96121a4c",
    "metadata": {},
    "source": [
-    "# 📍 6️⃣ Next Open Row\n",
-    "# Idea: Find the first empty row in a column from bottom to top"
+    "### 📍 6️⃣ Next Open Row\n",
+    "### Idea: Find the first empty row in a column from bottom to top"
    ]
   },
   {
@@ -706,8 +706,8 @@
    "id": "b1febee1",
    "metadata": {},
    "source": [
-    "# 🖨️ 7️⃣ Print Board\n",
-    "# Idea: Flip vertically so it looks like a real board"
+    "### 🖨️ 7️⃣ Print Board\n",
+    "### Idea: Flip vertically so it looks like a real board"
    ]
   },
   {
@@ -726,8 +726,8 @@
    "id": "46f833ee",
    "metadata": {},
    "source": [
-    "# 📊 8️⃣ Valid Columns\n",
-    "# Idea: Return a list of columns that are not full"
+    "### 📊 8️⃣ Valid Columns\n",
+    "### Idea: Return a list of columns that are not full"
    ]
   },
   {
@@ -747,8 +747,8 @@
    "metadata": {},
    "source": [
     "\n",
-    "# 🏆 9️⃣ Winning Move\n",
-    "# Idea: Check 4 pieces in all directions: horizontal, vertical, diagonals"
+    "### 🏆 9️⃣ Winning Move\n",
+    "### Idea: Check 4 pieces in all directions: horizontal, vertical, diagonals"
    ]
   },
   {
@@ -787,8 +787,8 @@
    "id": "75e93ea8",
    "metadata": {},
    "source": [
-    "# 🤝 1️⃣0️⃣ Draw\n",
-    "# Idea: No valid moves left and no winner → Draw"
+    "### 🤝 1️⃣0️⃣ Draw\n",
+    "### Idea: No valid moves left and no winner → Draw"
    ]
   },
   {
@@ -809,8 +809,8 @@
    "id": "afb4c94e",
    "metadata": {},
    "source": [
-    "# 🧠 1️⃣1️⃣ Terminal Node\n",
-    "# Idea: Game over if Player wins, AI wins, or Draw"
+    "### 🧠 1️⃣1️⃣ Terminal Node\n",
+    "### Idea: Game over if Player wins, AI wins, or Draw"
    ]
   },
   {
@@ -831,11 +831,11 @@
    "id": "1fefd7bb",
    "metadata": {},
    "source": [
-    "# ⭐ 1️⃣2️⃣ Evaluate Window (4 cells)\n",
-    "# Idea: AI evaluates sequences of 4 cells\n",
-    "# - 4 AI pieces → very good\n",
-    "# - 3 AI pieces + 1 empty → good\n",
-    "# - 3 player pieces + 1 empty → subtract points"
+    "### ⭐ 1️⃣2️⃣ Evaluate Window (4 cells)\n",
+    "### Idea: AI evaluates sequences of 4 cells\n",
+    "### - 4 AI pieces → very good\n",
+    "### - 3 AI pieces + 1 empty → good\n",
+    "### - 3 player pieces + 1 empty → subtract points"
    ]
   },
   {
@@ -868,10 +868,10 @@
    "id": "fb072971",
    "metadata": {},
    "source": [
-    "# 📈 1️⃣3️⃣ Score Board\n",
-    "# Idea: Evaluate entire board\n",
-    "# - Center column is more valuable\n",
-    "# - Check all rows, columns, diagonals"
+    "### 📈 1️⃣3️⃣ Score Board\n",
+    "### Idea: Evaluate entire board\n",
+    "### - Center column is more valuable\n",
+    "### - Check all rows, columns, diagonals"
    ]
   },
   {
@@ -909,8 +909,8 @@
    "id": "ff4f9fa3",
    "metadata": {},
    "source": [
-    "# 🤖 1️⃣4️⃣ Minimax + Alpha-Beta\n",
-    "# Idea: AI looks ahead certain depth, tries all moves, picks best using pruning"
+    "### 🤖 1️⃣4️⃣ Minimax + Alpha-Beta\n",
+    "### Idea: AI looks ahead certain depth, tries all moves, picks best using pruning"
    ]
   },
   {
@@ -973,8 +973,8 @@
    "id": "bca2347b",
    "metadata": {},
    "source": [
-    "# ▶️ 1️⃣5️⃣ Main Game Loop\n",
-    "# Idea: Initialize board, alternate turns, check win/draw"
+    "### ▶️ 1️⃣5️⃣ Main Game Loop\n",
+    "### Idea: Initialize board, alternate turns, check win/draw"
    ]
   },
   {
